Correct webpack config.

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -42,6 +42,7 @@
 		"In English":"In English",
 		"In Russian":"In Russian",
 		"Preliminary text (max length 250 symbols)" : "Preliminary text (max length 250 symbols)",
-		"Text" : "Text"
+		"Text" : "Text",
+		"Save" : "Save"
 	}
 }
