--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -42,6 +42,7 @@
 		"In English":"На английском",
 		"In Russian":"На Русском",
 		"Preliminary text (max length 250 symbols)" : "Предварительный текст (максимальная длина 250 символов)",
-		"Text" : "Текст"
+		"Text" : "Текст",
+		"Save" : "Сохранить"
 	}
 }
