--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -7,48 +7,50 @@
 			"try": "ВХОД"
 		}
 	},
-	"left_menu" : {
-		"dashboard" : "Рабочий стол",
-		"profile"   : "Профиль",
-		"employees" : "Работники",
-		"clients"   : "Клтенты",
-		"news"      : "Новости"
+	"left_menu": {
+		"dashboard": "Рабочий стол",
+		"profile": "Профиль",
+		"employees": "Работники",
+		"clients": "Клтенты",
+		"news": "Новости"
 	},
-	"dash" : {
+	"dash": {
 		"Edit Profile": "Редактировать профиль",
-		"Complete your profile" : "Заполните свой профиль",
-		"Last Name" : "Фамилия",
-		"First Name" : "Имя",
-		"Update Profile" : "Сохранить",
-		"Employee avatar" : "Аватар",
-		"For change avatar use service" : "Для изменения автара используйте сервир",
-		"dashboard" : "Рабочий стол",
-		"profile"   : "Профиль",
-		"employees" : "Работники",
-		"clients"   : "Клтенты",
-		"news"      : "Новости",
-		"title":"Заголовок",
+		"Complete your profile": "Заполните свой профиль",
+		"Last Name": "Фамилия",
+		"First Name": "Имя",
+		"Update Profile": "Сохранить",
+		"Employee avatar": "Аватар",
+		"For change avatar use service": "Для изменения автара используйте сервир",
+		"dashboard": "Рабочий стол",
+		"profile": "Профиль",
+		"employees": "Работники",
+		"clients": "Клтенты",
+		"news": "Новости",
+		"title": "Заголовок",
 		"title (max length 250 symbols)": "Заголовок (максимальная длина 250 символов)",
-		"author":"Автор",
-		"publish_at":"Дата публикации",
-		"created_by":"Кто создал",
-		"created_at":"Дата создания",
-		"updated_by":"Кто обновил",
-		"updated_at":"Дата обновления",
-		"is_active":"Актиность",
-		"actions" : "Действия",
-		"No data" : "Нет данных",
-		"Add" : "Добавить",
-		"news-add" : "Добавить новость",
-		"In English":"На английском",
-		"In Russian":"На Русском",
-		"Text" : "Текст",
-		"Save" : "Сохранить",
+		"author": "Автор",
+		"publish_at": "Дата публикации",
+		"created_by": "Кто создал",
+		"created_at": "Дата создания",
+		"updated_by": "Кто обновил",
+		"updated_at": "Дата обновления",
+		"is_active": "Актиность",
+		"actions": "Действия",
+		"No data": "Нет данных",
+		"Add": "Добавить",
+		"news-add": "Добавить новость",
+		"In English": "На английском",
+		"In Russian": "На Русском",
+		"Text": "Текст",
+		"Save": "Сохранить",
 		"Field `author`. Must be email": "Поле `автор`. Должно быть электронной почтой",
-		"Field `publish_at`. Must be today or future" : "Поле `Дата публикации`. Должно быть сегодня или в будущем",
-		"Field `title`. Is required." : "Поле `заголовок`. Необходимо.",
-		"Field `title`. More 250 symbols." : "Поле `текст`. Больше 250 симвлов.",
-		"Field `text`. Is required." : "Поле `текст`. Необходимо.",
-		"Error in save news" : "Ошибка при сохранении новости"
+		"Field `publish_at`. Must be today or future": "Поле `Дата публикации`. Должно быть сегодня или в будущем",
+		"Field `title`. Is required.": "Поле `заголовок`. Необходимо.",
+		"Field `title`. More 250 symbols.": "Поле `текст`. Больше 250 симвлов.",
+		"Field `text`. Is required.": "Поле `текст`. Необходимо.",
+		"Error in save news": "Ошибка при сохранении новости",
+		"Current": "Текущая",
+		"from": "из"
 	}
 }
