Use more dry. Add view for actions. ect...

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -51,6 +51,9 @@
 		"Field `text`. Is required." : "Field `text`. Is required.",
 		"Error in save news" : "Error in save news",
 		"Current" : "Current",
-		"from" : "from"
+		"from" : "from",
+		"Activate" : "Activate",
+		"Deactivate" : "Deactivate",
+		"Edit" : "Edit"
 	}
 }
