--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -51,6 +51,9 @@
 		"Field `text`. Is required.": "Поле `текст`. Необходимо.",
 		"Error in save news": "Ошибка при сохранении новости",
 		"Current": "Текущая",
-		"from": "из"
+		"from": "из",
+		"Activate" : "Активировать",
+		"Deactivate" : "Деактировать",
+		"Edit" : "Редактировать"
 	}
 }
