Add top navigation button. Logout.

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -54,6 +54,7 @@
 		"from" : "from",
 		"Activate" : "Activate",
 		"Deactivate" : "Deactivate",
-		"Edit" : "Edit"
+		"Edit" : "Edit",
+		"logout" : "Logout"
 	}
 }
