--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -54,6 +54,7 @@
 		"from": "из",
 		"Activate" : "Активировать",
 		"Deactivate" : "Деактировать",
-		"Edit" : "Редактировать"
+		"Edit" : "Редактировать",
+		"logout" : "Выход"
 	}
 }
