Ready update news active.

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -55,6 +55,9 @@
 		"Activate" : "Activate",
 		"Deactivate" : "Deactivate",
 		"Edit" : "Edit",
-		"logout" : "Logout"
+		"logout" : "Logout",
+		"Error news activate" : "Error news activate",
+		"News has updated the status of activity" : "News has updated the status of activity",
+		"You are sure?" : "You are sure?"
 	}
 }
