Ready update. Localizate datepicker.

--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -33,7 +33,7 @@
 		"publish_at":"Date published",
 		"created_by":"Who created",
 		"created_at":"Date created",
-		"updated_by'":"Who updated",
+		"updated_by":"Who updated",
 		"updated_at":"Date updated",
 		"is_active":"Is active",
 		"actions" : "Actions",
@@ -59,6 +59,19 @@
 		"Error news activate" : "Error news activate",
 		"News has updated the status of activity" : "News has updated the status of activity",
 		"You are sure?" : "You are sure?",
-		"news-edit" : "Edit news"
+		"news-edit" : "Edit news",
+		"No found news id" : "No found news id",
+		"Error load news" : "Error load news",
+		"locale": {
+			"startYear": 1900,
+			"endYear": 2099,
+			"dateFormat": "YYYY-MM-DD",
+			"days": ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+			"shortDays": ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"],
+			"shorterDays": ["S", "M", "T", "W", "T", "F", "S"],
+			"months": ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
+			"shortMonths": ["Jan", "Feb", "Mar", "Apr", "May", "June", "July", "Aug", "Sept", "Oct", "Nov", "Dec"],
+			"shorterMonths": ["J", "F", "M", "A", "M", "Ju", "Ju", "A", "Se", "O", "N", "D"]
+		}
 	}
 }
