--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -59,6 +59,19 @@
 		"Error news activate" : "Ошибка активации новости",
 		"News has updated the status of activity" : "Новость обновила статус активность",
 		"You are sure?" : "Ты уверен?",
-		"news-edit" : "Редактировать новость"
+		"news-edit" : "Редактировать новость",
+		"No found news id" : "Нет айди новости",
+		"Error load news" : "Ошибка загрузки новости",
+		"locale": {
+			"startYear": 1900,
+			"endYear": 2099,
+			"dateFormat": "YYYY-MM-DD",
+			"days": ["Воскресенье", "Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота"],
+			"shortDays": [ "Вск","Пнд","Втр","Срд","Чтв","Птн","Сбт" ],
+			"shorterDays": ["Вс", "Пн", "Вт", "Ср", "Чт", "Пт", "Сб"],
+			"months": [ "Январь","Февраль","Март","Апрель","Май","Июнь", "Июль","Август","Сентябрь","Октябрь","Ноябрь","Декабрь" ],
+			"shortMonths": [ "Янв","Фев","Мар","Апр","Май","Июн","Июл","Авг","Сен","Окт","Ноя","Дек" ],
+			"shorterMonths": ["J", "F", "M", "A", "X", "Ju", "Ju", "A", "Se", "O", "N", "D"]
+		}
 	}
 }
