--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -72,6 +72,18 @@
 			"months": [ "Январь","Февраль","Март","Апрель","Май","Июнь", "Июль","Август","Сентябрь","Октябрь","Ноябрь","Декабрь" ],
 			"shortMonths": [ "Янв","Фев","Мар","Апр","Май","Июн","Июл","Авг","Сен","Окт","Ноя","Дек" ],
 			"shorterMonths": ["J", "F", "M", "A", "X", "Ju", "Ju", "A", "Se", "O", "N", "D"]
-		}
+		},
+		"name":"Имя",
+		"surname":"Фамилия",
+		"groups":"Группы",
+		"is_deleted":"Удален",
+		"confirm_at":"Дата подтверждения",
+		"confirm_by":"Кто подтвердил",
+		"client-add":"Добавить Клиента",
+		"Field `{field}`. Is required." : "Поле `{field}`. Необходимо.",
+		"Field `{field}`. Must be email": "Поле `{field}`. Должно быть электронной почтой"
+		"password" : "Пароль",
+		"repeat"   : "Подтверждение",
+		"Bad confirmation password" : "Плохо подтвердили пароль"
 	}
 }
