--- a/server_employee/locales/en.json
+++ b/server_employee/locales/en.json
@@ -103,6 +103,7 @@
 		"isNoActivate" : "Неактивные",
 		"isDeleted" : "Deleted",
 		"isNoDeleted" : "Not deleted",
-		"all" : "All"
+		"all" : "All",
+		"Apply" : "Apply"
 	}
 }
