--- a/server_employee/locales/ru.json
+++ b/server_employee/locales/ru.json
@@ -103,6 +103,7 @@
 		"isNoActivate" : "Неактивные",
 		"isDeleted" : "Удаленные",
 		"isNoDeleted" : "Не удаленные",
-		"all" : "Все"
+		"all" : "Все",
+		"Apply" : "Применить"
 	}
 }
